--- a/Log_in_page/oh-package.json5
+++ b/Log_in_page/oh-package.json5
@@ -1,13 +1,12 @@
 {
-  "name": "log_in_page",
-  "version": "1.0.0",
-  "description": "Please describe the basic information.",
-  "main": "",
-  "author": "",
   "license": "",
-  "dependencies": {
-  },
   "devDependencies": {
     "@ohos/hypium": "1.0.11"
-  }
+  },
+  "author": "",
+  "name": "log_in_page",
+  "description": "Please describe the basic information.",
+  "main": "",
+  "version": "1.0.0",
+  "dependencies": {}
 }
