--- a/Log_in_page/entry/oh-package.json5
+++ b/Log_in_page/entry/oh-package.json5
@@ -6,5 +6,5 @@
   "description": "Please describe the basic information.",
   "main": "",
   "version": "1.0.0",
-  "dependencies": {}
+  "dependencies": { "@ohos/lottie": "^2.0.0"}
 }
